x/programs/rust/sdk-macros/tests/ui/fail/too-many-state-key-variants.stderr
error: Cannot exceed `u8::MAX + 1` keys in a state-schema
 --> tests/ui/fail/too-many-state-key-variants.rs:9:9
  |
9 |         Variant256 => u8,
  |         ^^^^^^^^^^
